--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before-install:
     - pip install pytest pytest-cov
 
 script:
-    - py.test call_by_object.py
+    - py.test call_by_object.py check_nccst_password_strength.py merge_sort.py
